# crypto-calculator

./: .dir-locals.el  Cargo.toml  Makefile
.github/workflows/: release.yml  test.yml
src/: app.rs  lib.rs  main.rs
