[package]
name = "crypto_calculator"
version = "1.0.3"
edition = "2018"

[[bin]]
bench = false
path = "src/main.rs"
name = "calc"

[dependencies]
eframe = "0.14.0" # Gives us egui, epi and web+native backends

serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
# http = ["eframe/http"] # Enable if you want to do http requests
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown
